implemented-junit-testing-for-beeja-projects-service